kubernetes/apps/monitoring/vm-stack/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - grafana.blackcats.cc
  rules:
    - backendRefs:
        - name: vm-stack-grafana
          port: 3000
